--- a/PillTemplateGrading/index.html
+++ b/PillTemplateGrading/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Pill Template Grading</title>
   </head>
   <body>
-    <div class="frame">
-      <div class="container"></div>
+    <div class="container"></div>
+    <div class="content">
+      <div class="bubbles-container"></div>
     </div>
+    <script src="main.js"></script>
   </body>
+
 </html>
