--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -37,7 +37,7 @@
           <div
             class="content"
             style="
-              background-image: url(https://i.pinimg.com/736x/b6/64/ff/b664ff81d94082287c244d109021e623.jpg);
+              background-image: url();
             "
           >
             <div class="name">Dragon</div>
