Cambios para que se permitan subir de otros formatos

--- a/DemoWebp/index.html
+++ b/DemoWebp/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Convertir JPG a WEBP</title>
+    <title>Convertir JPG/PNG a WEBP</title>
 </head>
 <body>
-    <h2>Convertir una imagen .jpg a .webp</h2>
+    <h2>Convertir una imagen .jpg o .png a .webp</h2>
     <form id="uploadForm" enctype="multipart/form-data" action="upload.php" method="POST">
-        <input type="file" name="image" accept="image/jpeg" required>
+        <input type="file" name="image" accept="image/jpeg, image/png" required>
         <br><br>
         <input type="submit" value="Convertir a WEBP">
     </form>
