--- a/Lines/index.html
+++ b/Lines/index.html
@@ -7,32 +7,45 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="image-track">
-      <img class="image"
+    <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+      <img
+        class="image"
         src="https://plus.unsplash.com/premium_photo-1732736768092-43a010784507?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt=""
+        draggable="false"
       />
-      <img class="image"
+      <img
+        class="image"
         src="https://images.unsplash.com/photo-1735627062325-c978986b1871?q=80&w=2012&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt=""
+        draggable="false"
       />
-      <img class="image"
-        src="https://images.unsplash.com/photo-1737008220100-804be759a152?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      <img
+        class="image"
+        src="https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?q=80&w=2113&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt=""
+        draggable="false"
       />
-      <img class="image"
+      <img
+        class="image"
         src="https://images.unsplash.com/photo-1735124283566-5f5707a40808?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt=""
+        draggable="false"
       />
-      <img class="image"
-        src="https://images.unsplash.com/photo-1737741708962-6611036dc351?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      <img
+        class="image"
+        src="https://images.unsplash.com/photo-1534447677768-be436bb09401?q=80&w=2094&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt=""
+        draggable="false"
       />
-      <img class="image"
-        src="https://images.unsplash.com/photo-1737143765999-bd3be790ab4f?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      <img
+        class="image"
+        src="https://images.unsplash.com/photo-1472214103451-9374bd1c798e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt=""
+        draggable="false"
       />
     </div>
+
     <script src="main.js"></script>
   </body>
 </html>
