Addes images and some js

--- a/TransitionDownMenu/pages/work.html
+++ b/TransitionDownMenu/pages/work.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        <div class="link"><a href="./index.html">Index</a></div>
+      </div>
+      <div class="links">
+        <div class="link"><a href="./about.html">About</a></div>
+        <div class="link"><a href="./work.html">Work</a></div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="images">
+        <img src="../images/4.jpg" alt="" />
+        <img src="../images/5.jpg" alt="" />
+        <img src="../images/6.jpg" alt="" />
+        <img src="../images/7.jpg" alt="" />
+      </div>
+    </div>
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="../scripts/main.js"></script>
+  </body>
 </html>
