--- a/TransitionDownMenu/pages/about.html
+++ b/TransitionDownMenu/pages/about.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        <div class="link"><a href="./index.html">Index</a></div>
+      </div>
+      <div class="links">
+        <div class="link"><a href="./about.html">About</a></div>
+        <div class="link"><a href="./work.html">Work</a></div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="info">
+        <div class="col">
+          <img src="../images/3.jpg" alt="" />
+        </div>
+        <div class="col">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged.
+          </p>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="../scripts/main.js"></script>
+  </body>
 </html>
